tests/baselines/reference/asyncArrowFunction3_es2017.errors.txt
asyncArrowFunction3_es2017.ts(1,20): error TS2372: Parameter 'await' cannot reference itself.


==== asyncArrowFunction3_es2017.ts (1 errors) ====
    function f(await = await) {
                       ~~~~~
!!! error TS2372: Parameter 'await' cannot reference itself.
    }